--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.os filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
