Imported Firestore targzs with local paths

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "com.google.external-dependency-manager": "file:C:/Users/santiago.firpo/Downloads/com.google.external-dependency-manager-1.2.166.tgz",
-    "com.google.firebase.app": "file:C:/Users/santiago.firpo/Downloads/com.google.firebase.app-8.1.0.tgz",
-    "com.google.firebase.auth": "file:C:/Users/santiago.firpo/Downloads/com.google.firebase.auth-8.1.0.tgz",
-    "com.google.firebase.firestore": "file:C:/Users/santiago.firpo/Downloads/com.google.firebase.firestore-8.1.0.tgz",
-    "com.google.firebase.storage": "file:C:/Users/santiago.firpo/Downloads/com.google.firebase.storage-8.1.0.tgz",
-    "com.unity.2d.animation": "5.0.5",
+    "com.google.external-dependency-manager": "file:com.google.external-dependency-manager-1.2.166.tgz",
+    "com.google.firebase.app": "file:com.google.firebase.app-8.1.0.tgz",
+    "com.google.firebase.auth": "file:com.google.firebase.auth-8.1.0.tgz",
+    "com.google.firebase.firestore": "file:com.google.firebase.firestore-8.1.0.tgz",
+    "com.google.firebase.storage": "file:com.google.firebase.storage-8.1.0.tgz",
+    "com.unity.2d.animation": "5.0.7",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.0.2",
     "com.unity.2d.sprite": "1.0.0",
@@ -18,8 +18,8 @@
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "10.4.0",
-    "com.unity.test-framework": "1.1.24",
-    "com.unity.textmeshpro": "3.0.4",
+    "com.unity.test-framework": "1.1.27",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.7",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "0.1.20-preview",
     "com.unity.ugui": "1.0.0",
