--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.so filter=lfs diff=lfs merge=lfs -text
+*.tgz filter=lfs diff=lfs merge=lfs -text
+.gz filter=lfs diff=lfs merge=lfs -text
